--- a/index.html
+++ b/index.html
@@ -8,25 +8,14 @@
   <meta name="description" content="illustration from a tired mind. Sheffield, South Yorkshire, UK">
   <meta name="keywords" content="illustration, sheffield">
 
-  <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-
-  <!-- Fonts -->
-  <link href="https://fonts.googleapis.com" rel="preconnect">
-  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
-
+  <link href="assets/css/labs.css" rel="stylesheet">
+  <link href="assets/css/masonry.css" rel="stylesheet">
 </head>
 
 <body class="index-page">
@@ -52,99 +41,67 @@
     </div>
   </header>
 
-  <main class="main">
-
-    <!-- Portfolio Section -->
-    <section id="portfolio" class="portfolio section">
-
-      <div class="container">
-
-        <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
-
-
-          <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200" style="position: relative; height: 1344px;">
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app" style="position: absolute; left: 0px; top: 0px;">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/animation/DinoDance.gif" class="img-fluid" alt="">
-                <div class="portfolio-info"> 
-                </div>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product" style="position: absolute; left: 440px; top: 0px;">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/animation/Unnamed.gif" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                </div>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding" style="position: absolute; left: 880px; top: 0px;">
-               <div class="portfolio-content h-100">
-                <img src="assets/img/animation/Unnamed (2).gif" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                </div>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books" style="position: absolute; left: 0px; top: 336px;">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/animation/Unnamed (3).gif" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                </div>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app" style="position: absolute; left: 440px; top: 336px;">
-               <div class="portfolio-content h-100">
-                <img src="assets/img/animation/Unnamed (4).gif" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                </div>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product" style="position: absolute; left: 880px; top: 336px;">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/animation/Unnamed (5).gif" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                </div>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding" style="position: absolute; left: 0px; top: 672px;">
-               <div class="portfolio-content h-100">
-                <img src="assets/img/animation/Unnamed (6).gif" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                </div>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books" style="position: absolute; left: 440px; top: 672px;">
-               <div class="portfolio-content h-100">
-                <img src="assets/img/animation/Unnamed (7).gif" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                </div>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app" style="position: absolute; left: 880px; top: 672px;">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/animation/Unnamed (8).gif" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                </div>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-          </div><!-- End Portfolio Container -->
-
-        </div>
-
+<main class="main">
+<div class="container">
+  <div class="wrapper">
+    <div class="masonry">
+      <div class="brick">
+        <img src="assets/img/animation/ThisBIG.gif" title="MENTAL">
       </div>
-
-    </section><!-- /Portfolio Section -->
-
-  </main>
+      <div class="brick">
+        <img src="assets/img/animation/DogHatThick.gif" title="Good Day">
+      </div>
+      <div class="brick">
+        <img src="assets/img/animation/DinoDance.gif" title="Cutting Loose">
+      </div>
+      <div class="brick">
+        <img src="assets/img/animation/Unnamed.gif"  title="Big Spoon">
+      </div>
+      <div class="brick">
+      <div class="brick">
+        <img src="assets/img/animation/Unnamed (3).gif" title="Hey Good Lookin">
+      </div>
+        <img src="assets/img/animation/LovingLife.gif" title="Do Do Do">
+      </div>
+      <div class="brick">
+        <img src="assets/img/animation/Unnamed (2).gif" title="To The Moon">
+      </div>
+      
+      <div class="brick">
+        <img src="assets/img/animation/Release.gif" title="MASSIVE">
+      </div>
+      <div class="brick">
+        <img src="assets/img/animation/Unnamed (4).gif" title="Piggy Party">
+      </div>
+      <div class="brick">
+        <img src="assets/img/animation/Unnamed (5).gif" title="Sugar Rush">
+      </div>
+      <div class="brick">
+        <img src="assets/img/animation/Unnamed (6).gif" title="You aint seen me">
+      </div>
+      <div class="brick">
+        <img src="assets/img/animation/Unnamed (7).gif" title="Surprise">
+      </div>
+      <div class="brick">
+        <img src="assets/img/animation/Unnamed (8).gif" title="Mouse">
+      </div>
+      <div class="brick">
+        <img src="assets/img/animation/IMG_0816.GIF" title="aRGHHHH">
+      </div>
+      <div class="brick">
+        <img src="assets/img/animation/IMG_0820.GIF" title="Howdy">
+      </div>
+      <div class="brick">
+        <img src="assets/img/animation/IMG_0824.GIF" title="Got an Itch">
+      </div>
+      <div class="brick">
+        <img src="assets/img/animation/IMG_0996.GIF" title="Here I Come!">
+      </div>
+    </div><!-- .masonry -->
+  </div>
+</div>
+</main>
+  
 
   <footer id="footer" class="footer background">
 
