--- a/about.html
+++ b/about.html
@@ -4,29 +4,18 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>About Bad Sleep</title>
+  <title>How to Bad Sleep</title>
   <meta name="description" content="illustration from a tired mind. Sheffield, South Yorkshire, UK">
   <meta name="keywords" content="illustration, sheffield">
 
-  <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-
-  <!-- Fonts -->
-  <link href="https://fonts.googleapis.com" rel="preconnect">
-  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-
-  <!-- Vendor CSS Files -->
+   <!-- Vendor CSS Files  / gives heading control and icons for menu -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
-
+  <link href="assets/css/labs.css" rel="stylesheet">
+  <link href="assets/css/masonry.css" rel="stylesheet">
 </head>
 
 <body class="about-page">
@@ -65,11 +54,9 @@
             <img src="assets/img/animation/Unnamed (3).gif" class="img-fluid" alt="">
           </div>
           <div>
-            <p class="fst-italic py-3">
-              I don't sleep so well.
-            </p>
+            
             <p class="py-3">
-              Currently not sleeping in Sheffield
+              Currently not sleeping in Sheffield. Take that as you will.
             </p>
           </div>
         </div>
@@ -93,19 +80,11 @@
   </footer>
 
 
-
-
   <!-- Preloader -->
   <div id="preloader"></div>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
