--- a/contact.html
+++ b/contact.html
@@ -8,21 +8,9 @@
   <meta name="description" content="illustration from a tired mind. Sheffield, South Yorkshire, UK">
   <meta name="keywords" content="illustration, sheffield">
 
-  <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-
-  <!-- Fonts -->
-  <link href="https://fonts.googleapis.com" rel="preconnect">
-  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-
-  <!-- Vendor CSS Files -->
+  <!-- Vendor CSS Files  / gives heading control and icons for menu -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
@@ -59,12 +47,9 @@
 
       <div class="container">
 
-       
-		
         <div class="row gy-4 justify-content-start">
             <p class="fst-italic py-3">
-              Learn the Secrets of my Bad Sleep
-             <li><strong><a href="mailto:mhead83@gmail.com" class="icon far fa-envelope-open"><span class="label">Email</span></a></strong></li>
+              Learn the Secrets of my Bad Sleep by sending me a super cool <strong><a href="mailto:mhead83@gmail.com" class="icon far fa-envelope-open"><span class="label">Email</span></a></strong>.
             </p>
         </div>
 
@@ -91,13 +76,7 @@
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-
+  
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
 
