--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="illustration from a tired mind. Sheffield, South Yorkshire, UK">
   <meta name="keywords" content="illustration, sheffield">
 
-  <!-- Vendor CSS Files -->
+  <!-- Vendor CSS Files  / gives heading control and icons for menu -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
 
@@ -42,7 +42,7 @@
   </header>
 
 <main class="main">
-<div class="container">
+
   <div class="wrapper">
     <div class="masonry">
       <div class="brick">
@@ -119,15 +119,9 @@
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"></a>
 
 
-
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
