--- a/index.html
+++ b/index.html
@@ -8,19 +8,12 @@
   <meta name="description" content="illustration from a tired mind. Sheffield, South Yorkshire, UK">
   <meta name="keywords" content="illustration, sheffield">
 
-  <!-- Vendor CSS Files  / gives heading control and icons for menu -->
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
   <link href="assets/css/labs.css" rel="stylesheet">
   <link href="assets/css/masonry.css" rel="stylesheet">
-</head>
 
-<body class="index-page">
-
-  <header id="header" class="header d-flex align-items-center sticky-top">
+<header id="header" class="header d-flex align-items-center sticky-top">
     <div class="container-fluid  position-relative d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center">
@@ -28,20 +21,45 @@
         <!-- <img src="assets/img/logo.png" alt=""> -->
         <h1 class="sitename">Bad Sleep</h1>
       </a>
-
-      <nav id="navmenu" class="navmenu">
-        <ul>
-          <li><a href="index.html" class="active">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-        <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
-      </nav>
-
+   
     </div>
-  </header>
 
-<main class="main">
+
+        </style>
+
+        <script type="text/javascript">
+            function openNav() {
+                document.getElementById("mySidebar").style.width = "250px";
+                document.getElementById("main").style.marginLeft = "0px";
+            }
+
+            function closeNav() {
+                document.getElementById("mySidebar").style.width = "0";
+                document.getElementById("main").style.marginLeft= "0";
+            }
+        </script>
+
+    </head>
+    
+    <body>
+          <div id="mySidebar" class="sidebar">
+              <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+              <a href="index.html" class="active">Home</a>
+              <a href="about.html">All About</a>
+              <a href="contact.html">Say Hi</a>
+          </div>
+
+          <div id="main">
+              <button class="openbtn" onclick="openNav()">&#9776;</button>  
+          
+          </div>
+    </body>
+
+</head>
+
+</header>
+
+<body>
 
   <div class="wrapper">
     <div class="masonry">
@@ -107,25 +125,19 @@
 
     <div class="container">
       <div class="copyright text-left ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">2025 Bad Sleep</strong> <span>All Rights Reserved</span></p>
-      </div>
+        <p>© <span>Copyright</span> <strong class="px-1 sitename">2025 Bad Sleep</strong> <span>All Rights Reserved</span><br>
         Base Code by <a href="https://bootstrapmade.com/"><strong>BootstrapMade</strong></a> Distributed by <a href="https://themewagon.com" target="_blank"><strong>ThemeWagon</strong></a>
       </div>
     </div>
 
   </footer>
 
-  <!-- Scroll Top -->
-  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"></a>
-
-
-  <!-- Vendor JS Files -->
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
 
+
+  
 </body>
 
 </html>
