--- a/contact.html
+++ b/contact.html
@@ -65,12 +65,8 @@
 
       <div class="container">
 
-        <div class="row gy-4 justify-content-start">
-            <p class="fst-italic py-3">
-              Learn the Secrets of my Bad Sleep by sending me a super cool <strong><a href="mailto:mhead83@gmail.com" class="icon far fa-envelope-open"><span class="label">Email</span></a></strong>.
-            </p>
-        </div>
-
+      <p> Learn the Secrets of my Bad Sleep by sending me a super cool <strong><a href="mailto:mhead83@gmail.com" class="icon far fa-envelope-open"><span class="label">Email</span></a></strong></p>
+      
       </div>
     </section><!-- /Contact Section -->
 
@@ -80,8 +76,8 @@
 
     <div class="container">
       <div class="copyright text-left ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">2025 Bad Sleep</strong> <span>All Rights Reserved</span><br>
-        Base Code by <a href="https://bootstrapmade.com/"><strong>BootstrapMade</strong></a> Distributed by <a href="https://themewagon.com" target="_blank"><strong>ThemeWagon</strong></a>
+        <p>© <span>Copyright</span> <strong class="px-1 sitename">2025 Bad Sleep</strong><br>
+        Base Code by <a href="https://bootstrapmade.com/"><strong>BootstrapMade</strong></a>
       </div>
     </div>
 
