--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
       <div class="brick">
         <img src="assets/img/animation/Unnamed.gif"  title="Big Spoon">
       </div>
+       <div class="brick">
+        <img src="assets/img/animation/Ahhhh.gif"  title="Big Spoon">
+      </div>
       <div class="brick">
       <div class="brick">
         <img src="assets/img/animation/Unnamed (3).gif" title="Hey Good Lookin">
