--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <img src="assets/img/animation/Unnamed (3).gif" title="Hey Good Lookin">
       </div>
        <div class="brick">
-        <img src="assets/img/animation/Ahhhh.gif"  title="Big Spoon">
+        <img src="assets/img/animation/Ahhhh.gif"  title="Ahhhh">
       </div>
       <div class="brick">
       
