--- a/contact.html
+++ b/contact.html
@@ -58,19 +58,18 @@
 
 </header>
 
-  <main class="main">
+<body>
+  <section> 
+    <div class="container">
+        <a href="mailto:mhead83@gmail.com" class="icon far fa-envelope-open"><span class="label"></span>
+        <img src="assets/img/animation/Mail.gif" title="Hullo" style="width:400px">
+        </a>
+        <p> Learn the Secrets of my Bad Sleep <br> Send me a super cool Email <strong><u><a href="mailto:mhead83@gmail.com" class="icon far fa-envelope-open"><span class="label">Here</span></a></u></strong></p>
+    </div>  
+  </section>
+</body>
 
-    <!-- Contact Section -->
-    <section id="Contact" class="Contact section">
 
-      <div class="container">
-
-      <p> Learn the Secrets of my Bad Sleep by sending me a super cool <strong><a href="mailto:mhead83@gmail.com" class="icon far fa-envelope-open"><span class="label">Email</span></a></strong></p>
-      
-      </div>
-    </section><!-- /Contact Section -->
-
-  </main>
 
   <footer id="footer" class="footer background">
 
