--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,8 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
-
+  <link href="assets/css/labs.css" rel="stylesheet">
+  <link href="assets/css/masonry.css" rel="stylesheet">
 </head>
 
 <body class="contact-page">
@@ -25,8 +26,7 @@
         <h1 class="sitename">Bad Sleep</h1>
       </a>
 
-     
-  <script type="text/javascript">
+       <script type="text/javascript">
             function openNav() {
                 document.getElementById("mySidebar").style.width = "250px";
                 document.getElementById("main").style.marginLeft = "0px";
@@ -38,7 +38,7 @@
             }
         </script>
 
-    </head>
+</head>
     
     <body>
           <div id="mySidebar" class="sidebar">
@@ -54,24 +54,25 @@
           </div>
     </body>
 
-</head>
-
 </header>
 
 <body>
+  
   <section> 
     <div class="container">
         <a href="mailto:mhead83@gmail.com" class="icon far fa-envelope-open"><span class="label"></span>
-        <img src="assets/img/animation/Mail.gif" title="Hullo" style="width:400px">
-        </a>
+        <img src="assets/img/animation/Mail.gif" title="Hullo" style="width:400px"></a>
         <p> Learn the Secrets of my Bad Sleep <br> Send me a super cool Email <strong><u><a href="mailto:mhead83@gmail.com" class="icon far fa-envelope-open"><span class="label">Here</span></a></u></strong></p>
     </div>  
   </section>
+
+  <section>
+
 </body>
 
 
 
-  <footer id="footer" class="footer background">
+<footer id="footer" class="footer background">
 
     <div class="container">
       <div class="copyright text-left ">
