--- a/index.html
+++ b/index.html
@@ -94,6 +94,13 @@
       <div class="brick">
         <img src="assets/img/animation/Unnamed (2).gif" title="To The Moon">
       </div>
+
+
+      <div class="brick">
+        <img src="assets/img/animation/Meow.gif" title="MEOW">
+      </div>
+
+
        <div class="brick">
         <img src="assets/img/animation/Helloooo.gif" title="Hey!">
       </div>
@@ -110,12 +117,14 @@
       </div>
       
       <div class="brick">
+        <img src="assets/img/animation/Unnamed (8).gif" title="Mouse">
+      </div>
+
+
+      <div class="brick">
         <img src="assets/img/animation/Unnamed (5).gif" title="Sugar Rush">
       </div>
 
-      <div class="brick">
-        <img src="assets/img/animation/Unnamed (8).gif" title="Mouse">
-      </div>
 
       <div class="brick">
         <img src="assets/img/animation/Unnamed (6).gif" title="You aint seen me">
