--- a/contact.html
+++ b/contact.html
@@ -60,13 +60,13 @@
   
   <section> 
     <div class="container">
-        <a href="mailto:mhead83@gmail.com" class="icon far fa-envelope-open"><span class="label"></span>
-        <img src="assets/img/animation/Mail.gif" title="Hullo" style="width:400px"></a>
-        <p> Learn the Secrets of my Bad Sleep <br> Send me a super cool Email <strong><u><a href="mailto:mhead83@gmail.com" class="icon far fa-envelope-open"><span class="label">Here</span></a></u></strong></p>
+        <a href="mailto:sayhitobadsleep@gmail.com" class="icon far fa-envelope-open"><span class="label"></span>
+        <img src="assets/img/animation/YouGotMail.GIF" title="Hullo" style="width:400px"></a>
+        <p> Learn the Secrets of my Bad Sleep <br> <strong><u><a href="mailto:sayhitobadsleep@gmail.com" class="icon far fa-envelope-open"><span class="label">sayhitobadsleep@gmail.com</span></a></u></strong></p>
     </div>  
   </section>
 
-  <section>
+
 
 </body>
 
@@ -76,8 +76,8 @@
 
     <div class="container">
       <div class="copyright text-left ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">2025 Bad Sleep</strong><br>
-        Base Code by <a href="https://bootstrapmade.com/"><strong>BootstrapMade</strong></a>
+        <p><u><a href="mailto:sayhitobadsleep@gmail.com" class="icon far fa-envelope-open"><span class="label">sayhitobadsleep@gmail.com</span></a></u><br>
+          © <span>Copyright</span> <strong class="px-1 sitename">2026 Bad Sleep</strong></a>
       </div>
     </div>
 
