--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
   <section>
    
     <div class="container">
-        <img src="assets/img/animation/IMG_0820.GIF" title="Hullo" style="width:400px">
+        <img src="assets/img/animation/NicetoMeetYou.GIF" title="Hullo" style="width:400px">
           <p>
             Tired illustrator and untrained animator. <br> 
             Currently not sleeping in Sheffield.
@@ -74,8 +74,8 @@
 
     <div class="container">
       <div class="copyright text-left ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">2025 Bad Sleep</strong><br>
-        Base Code by <a href="https://bootstrapmade.com/"><strong>BootstrapMade</strong></a>
+        <p><u><a href="mailto:sayhitobadsleep@gmail.com" class="icon far fa-envelope-open"><span class="label">sayhitobadsleep@gmail.com</span></a></u><br>
+        © <span>Copyright</span> <strong class="px-1 sitename">2026 Bad Sleep</strong>
       </div>
     </div>
 
