--- a/about.html
+++ b/about.html
@@ -20,10 +20,8 @@
   <header id="header" class="header d-flex align-items-center sticky-top">
     <div class="container-fluid  position-relative d-flex align-items-center justify-content-between">
 
-      <a href="index.html" class="logo d-flex align-items-center">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">Bad Sleep</h1>
+      <a href="index.html" class="logo">
+         <h1 class="sitename">Bad Sleep</h1> <img src="assets/img/TiredEyes.PNG">
       </a>
 
        <script type="text/javascript">
@@ -60,7 +58,7 @@
   <section>
    
     <div class="container">
-        <img src="assets/img/animation/NicetoMeetYou.gif" title="Hullo" style="width:400px">
+        <img src="assets/img/animation/NicetoMeetYou.GIF" title="Hullo" style="width:400px">
           <p>
             Tired illustrator and untrained animator. <br> 
             Currently not sleeping in Sheffield.
