--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
   <section>
    
     <div class="container">
-        <img src="assets/img/animation/NicetoMeetYou.GIF" title="Hullo" style="width:400px">
+        <img src="assets/img/animation/NicetoMeetYou.gif" title="Hullo" style="width:400px">
           <p>
             Tired illustrator and untrained animator. <br> 
             Currently not sleeping in Sheffield.
