--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
       </div>
      
       <div class="brick">
-        <img src="assets/img/animation/GotanItch.GIF" title="Got an Itch">
+        <img src="assets/img/animation/GotanItch.gif" title="Got an Itch">
       </div>
     
     </div><!-- .masonry -->
